--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="disply-table">
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
                     <h4>Nirnay Sawant</h4>
-                    <h1>Front-End<br />Devloper</h1> </div>
+                    <h1>Software Developer<br />Devloper</h1> </div>
             </div>
         </div>
     </div>
