careear section updated

--- a/index.html
+++ b/index.html
@@ -83,30 +83,58 @@
     </div>
     <!-- ./about -->
     
-    <!-- experience  -->
-    <div class="section" id="experience">
-        <div class="container">
-            <div class="col-md-12">
-                <h4>02</h4>
-                <h1 class="size-50">My <br /> Experience</h1>
-                <div class="h-50"></div>
-            </div>
-            <div class="col-md-12">
-                <ul class="timeline">
-                    <li class="timeline-event" data-aos="fade-up">
-                        <label class="timeline-event-icon"></label>
-                        <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">July 2021 - May 2022</p>
-                            <h3>Circle Code Solution, CCS</h3>
-                            <h4>Front-end web development Intern</h4>
-                            <p>I’m Completing my Internship in Front End Developer, Programming, Testing Debug code.</p>
-                        </div>
-                    </li>
-                </ul>
-            </div>
+  <!-- experience -->
+<div class="section" id="experience">
+    <div class="container">
+        <div class="col-md-12">
+            <h4>02</h4>
+            <h1 class="size-50">My <br /> Experience</h1>
+            <div class="h-50"></div>
+        </div>
+        <div class="col-md-12">
+            <ul class="timeline">
+                <li class="timeline-event" data-aos="fade-up">
+                    <label class="timeline-event-icon"></label>
+                    <div class="timeline-event-copy">
+                        <p class="timeline-event-thumbnail">July 2021 - Dec 2021</p>
+                        <h3>Circle Code Solution</h3>
+                        <h4>Frontend Developer - Internship</h4>
+                        <p>Developed UI components using HTML and CSS, gaining proficiency in the Vue.js framework. Collaborated on multiple projects, enhancing user experience and delivering polished front-end solutions.</p>
+                    </div>
+                </li>
+                <li class="timeline-event" data-aos="fade-up">
+                    <label class="timeline-event-icon"></label>
+                    <div class="timeline-event-copy">
+                        <p class="timeline-event-thumbnail">Jan 2022 - Oct 2023</p>
+                        <h3>Freelancer</h3>
+                        <h4>Flutter Developer</h4>
+                        <p>Built high-quality components and UI for desktop and Android applications, specializing in state management using Stacked, Provider, GetX, and BLoC. Integrated APIs with Dio to deliver seamless data exchange and smooth user experiences.</p>
+                    </div>
+                </li>
+                <li class="timeline-event" data-aos="fade-up">
+                    <label class="timeline-event-icon"></label>
+                    <div class="timeline-event-copy">
+                        <p class="timeline-event-thumbnail">Oct 2023 - Dec 2023</p>
+                        <h3>QuickJet Business Solution</h3>
+                        <h4>Flutter Developer</h4>
+                        <p>Improved state management by migrating the application to Provider. Integrated custom APIs with third-party services, maintained code quality standards, and ensured consistency with regular code reviews.</p>
+                    </div>
+                </li>
+                <li class="timeline-event" data-aos="fade-up">
+                    <label class="timeline-event-icon"></label>
+                    <div class="timeline-event-copy">
+                        <p class="timeline-event-thumbnail">Dec 2023 - Present</p>
+                        <h3>Choira Musictech, IIT Bombay</h3>
+                        <h4>Flutter Developer</h4>
+                        <p>Developing and maintaining cross-platform Flutter applications, collaborating closely with backend developers to ensure seamless integration. Utilizing Very Good CLI, GetX, and BLoC for efficient state management, conducting code reviews, and optimizing app performance for iOS and Android platforms.</p>
+                    </div>
+                </li>
+            </ul>
         </div>
     </div>
-    <!-- ./experience -->
+</div>
+<!-- ./experience -->
+
     
     <!-- projects -->
     <div class="section" id="projects">
